<resources>
    <string name="app_name">SJSU GO</string>
<<<<<<< Updated upstream
    <string name="textBox">0</string>
    <string name="Toast">Toast</string>
    <string name="Count">Count</string>
    <string name="Random">Random</string>
=======
    <string name="title_activity_login">LoginActivity</string>
    <string name="sjsu_id">SJSU ID</string>
    <string name="sjsu_pass">SJSU Password</string>
    <string name="login_text">Log In</string>
<<<<<<< HEAD
    <string name="signup_redirect">Don\'t have an account? Sign Up!</string>
=======
    <string name="signup_redirect">Don\'t have an account?</string>
>>>>>>> cc48beecf1f3d7bcf0b811a77824d43a9136661a
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="sjsu_email">SJSU Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sjsu_major">Major</string>
    <string name="sjsu_year">Academic Year</string>
<<<<<<< HEAD
=======
    <string name="log_out">Log Out</string>
    <string name="add_event">Add Event</string>
>>>>>>> cc48beecf1f3d7bcf0b811a77824d43a9136661a

    <string-array name="departmentMajor">
        <item>Aerospace Engineering</item>
        <item>Aviation and Technology</item>
        <item>Biomedical Engineering</item>
        <item>Chemical and Materials Engineering</item>
        <item>Civil and Environmental Engineering</item>
        <item>Computer Engineering</item>
        <item>Electrical Engineering</item>
        <item>General Engineering</item>
        <item>Industrial and Systems Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Graduate and Extended Studeies</item>
        <item>Other</item>
    </string-array>

    <string-array name="academicYear">
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2011</item>
        <item>2010</item>
    </string-array>
<<<<<<< HEAD
=======
    <string name="title_activity_test">test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
>>>>>>> cc48beecf1f3d7bcf0b811a77824d43a9136661a
>>>>>>> Stashed changes
</resources>
