<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/screenBackground">

    <TextView
            app:layout_constraintVertical_bias="0.3"
            android:textColor="@android:color/white"
            android:textSize="72sp"
            android:fontFamily="sans-serif-black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textBox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <Button
            android:text="@string/Toast"
            android:onClick="toastMe"
            android:background="@color/buttonBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toast_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <Button
            android:text="@string/Count"
            android:background="@color/buttonBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/count_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toEndOf="@+id/toast_button"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/random_button"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/Random"
            android:background="@color/buttonBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/random_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>