<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
    <TextView
            android:text="@string/sjsu_id"
            android:layout_width="118dp"
            android:layout_height="23dp"
            android:id="@+id/id_text" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/pass_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_border"
    />
    <TextView
            android:text="@string/sjsu_pass"
            android:layout_width="118dp"
            android:layout_height="22dp"
            android:id="@+id/pass_text" android:layout_marginBottom="256dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@drawable/button_border"
    />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/go_logo"
            android:id="@+id/imageView3"
            app:layout_constraintBottom_toTopOf="@+id/id_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
    />
    <Button
            android:text="@string/login_text"
            android:layout_width="273dp"
            android:layout_height="42dp"
            android:id="@+id/button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pass_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="196dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/button_color"
            tools:text="@string/login_text"
            android:textColor="@color/button_text_color"
    />
    <TextView
            android:text="@string/signup_redirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_redirect" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.01"
    />
</androidx.constraintlayout.widget.ConstraintLayout>